Deployment of Blog App 4th commit

--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -24,14 +24,14 @@ a{
    
 }
 
-ul{
+.header{
     list-style-type: none;
     display: flex;
     justify-content: space-evenly;
     width:200px;
     margin-top: 10px;
 }
-li{
+.header li{
     float: left;
 }
 
